
Version 1.1.21, 09/18/2016

  • Appropiate use of std namespace, as required by CRAN.

Version 1.1.22, 06/12/2016

  • No fenv header usage if software floating-point emulation is used (bug
    report: NaN test failed on Debian armel).

Version 1.1.23, 03/24/2017

  • setup.py: Late NumPy import for better dependency management.

Version 1.1.24, 08/04/2017

 • R 3.5 corrects the formula for the “Canberra” metric. See
   https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17285.
   The formula in the fastcluster package was changed accordingly. This
   concerns only the R interface. SciPy and fastcluster's Python interface
   always had the correct formula.

Version 1.1.25, 05/27/2018

 • Removed all “#pragma GCC diagnostic” directives in .cpp files due to changed
   CRAN requirements (CRAN repository only, not the GitHub repository).
 • Updated build scripts for Python 3.7 (thanks to Forest Gregg).
 • Simplified setup.py.
 • Updated and corrected documentation.

Version 1.1.26, 12/30/2019

• Small updates for Python 3.8.

Version 1.1.27, 01/20/2021

• Updated NumPy dependency for Python 3.9.

Version 1.1.28, 02/03/2021

• Replace deprecated “numpy.bool” and “numpy.int” by “bool” and “int”.

Version 1.2.0, 05/23/2021

• Dropped support for Python 2.
• Python interface: Updated definition of the Yule distance function, following
  a change in SciPy 1.6.3.

Version 1.2.1, 05/24/2021

• Documentation update.

Version 1.2.2, 05/24/2021

• Documentation update.

Version 1.2.3, 05/24/2021

• Fixed #pragma in fastcluster.cpp.

Version 1.2.4, 08/21/2021

• Fixed NumPy versions in Travis builds.

Version 1.2.5, 02/26/2022

• Updated pyproject.toml to work with Python 3.10 and future Python versions.

Version 1.2.6, 02/27/2022

• Move to GitHub action for CI. No code changes.

Version 1.3.0, 05/04/2025

• Support for NumPy 2.
• Python interface: Updated definition of the Jaccard distance function,
  following a change in SciPy 1.15.0.