@@ -1,0 +1,2 @@
+.github/** export-ignore
+.git* export-ignore
