@@ -41,13 +41,11 @@ jobs:
         uses: pypa/cibuildwheel@v2.23.3
         env:
           CIBW_ARCHS_LINUX: x86_64 aarch64
-          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_WINDOWS: auto64
           CIBW_TEST_REQUIRES: pytest scipy>=1.15
-          CIBW_TEST_COMMAND: 'pytest {project}/tests'
-          CIBW_SKIP: >-
-            cp36-* cp37-* cp38-* cp39-*
-            pp* *-musllinux_* *s390x *ppc64le
+          CIBW_TEST_COMMAND: 'pytest -s {project}/tests'
+          CIBW_SKIP: pp* *-musllinux_* *s390x *ppc64le
       - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
