@@ -1,5 +1,0 @@
-﻿To cite fastcluster in publications, please use:
-
-Daniel Müllner, fastcluster: Fast Hierarchical, Agglomerative Clustering
-Routines for R and Python, Journal of Statistical Software, 53 (2013), no. 9,
-1–18, https://doi.org/10.18637/jss.v053.i09.
