@@ -1,6 +1,0 @@
-[testenv]
-deps =
-    pytest
-    scipy>=1.15
-commands = pytest -s {posargs}
-
