@@ -254,3 +254,7 @@ Version 1.3.0, 05/04/2025
 • Support for NumPy 2.
 • Python interface: Updated definition of the Jaccard distance function,
   following a change in SciPy 1.15.0.
+
+Changelog for the next release
+
+• Replaced setup.py with pyproject.toml and Meson.
